reduce direct guava use